# taffy

./: Cargo.toml
src/: geometry.rs
src/compute/: flexbox.rs  leaf.rs
src/compute/grid/types/: coordinates.rs
src/style/: alignment.rs  available_space.rs  block.rs  compact_length.rs  dimension.rs  flex.rs  grid.rs  mod.rs
src/util/: debug.rs
taffy-wasm/: Cargo.toml  README_DEBUG.md  README_DWARF_DEBUGGING.md  build.rs  node_init_example.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
taffy-wasm/src/: lib.rs
