[package]
name = "taffy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Debug profile for development with full debug info
[profile.dev]
debug = 2        # Full debug info including DWARF
opt-level = 0    # No optimizations
overflow-checks = true
# Ensure debug info is preserved in WASM
[profile.dev.package.wee_alloc]
debug = false    # wee_alloc debug info can be noisy

# Release profile that still includes debug info for profiling
[profile.profiling]
inherits = "release"
debug = 1        # Line tables only

# Configure wasm-pack to preserve DWARF debug info in dev builds
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde        = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
# Include debug and wasm-console features for taffy core debug output
taffy = { path = "..", default-features = false, features = ["std","flexbox","grid","serde","taffy_tree","debug","wasm-console"] }

[build-dependencies]
ts-rs = "10.1.0"
taffy = { path = "..", features = ["serde"] }
regex = "1.10"

[features]
default = []
# Use browser console.log for debug output (default for web)
browser-console = []
# Use println for debug output (better for Node.js/Vitest/VSCode debugging) 
node-console = []
